remove unnecesary files and add firebase to deploy web

--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.12.2",
     "astro-lenis": "^1.0.0",
+    "firebase-tools": "^13.15.0",
     "framer-motion": "^11.3.2",
-    "locomotive-scroll": "^4.1.4",
     "gsap": "^3.12.5",
     "lenis": "^1.1.9",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
